<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/krishna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/krishna" />

    <TextView
        android:id="@+id/textView_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/krishna"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/action_help"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button_guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/guide" />

    <Button
        android:id="@+id/button_FAQ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_guide"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/FAQ" />

    <Button
        android:id="@+id/button_contactDeveloper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_FAQ"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/contactDeveloper" />

</RelativeLayout>
