<?xml version="1.0" encoding="utf-8"?>
<TableLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<TableRow>
		<TextView
			android:id="@+id/textView_transferSource"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginStart="10dp"
			android:text="@string/transferSource"/>

		<Spinner
			android:id="@+id/spinner_transferSource"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="50dp"
			android:layout_marginStart="50dp"/>
	</TableRow>

	<TableRow>
		<TextView
			android:id="@+id/textView_transferDestination"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginStart="10dp"
			android:text="@string/transferDestination"/>

		<Spinner
			android:id="@+id/spinner_transferDestination"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="50dp"
			android:layout_marginStart="50dp"/>
	</TableRow>

	<com.chaturvedi.customviews.MyAutoCompleteTextView
		android:id="@+id/editText_particulars"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:layout_marginLeft="10dp"
		android:layout_marginStart="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginEnd="10dp"
		android:maxLines="1"
		android:inputType="textCapWords"
		android:hint="@string/particulars"
		android:imeOptions="actionNext" />

	<TableRow>
		<TextView
			android:id="@+id/textView_rate"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginStart="10dp"
			android:text="@string/rate" />

		<EditText
			android:id="@+id/editText_rate"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="50dp"
			android:layout_marginStart="50dp"
			android:ems="6"
			android:inputType="numberDecimal"/>
	</TableRow>

	<TableRow>
		<TextView
			android:id="@+id/textView_quantity"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginStart="10dp"
			android:text="@string/quantity" />

		<EditText
			android:id="@+id/editText_quantity"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="50dp"
			android:layout_marginStart="50dp"
			android:ems="6"
			android:inputType="numberDecimal"/>
	</TableRow>

	<TableRow>
		<TextView
			android:id="@+id/textView_amount"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginStart="10dp"
			android:text="@string/amount" />

		<EditText
			android:id="@+id/editText_amount"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="50dp"
			android:layout_marginStart="50dp"
			android:ems="6"
			android:inputType="numberDecimal"/>
	</TableRow>

	<TableRow>
		<TextView
			android:id="@+id/textView_date"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginStart="10dp"
			android:text="@string/date" />

		<EditText
			android:id="@+id/editText_date"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="50dp"
			android:layout_marginStart="50dp"
			android:focusable="false"
			android:inputType="date"
			android:ems="6"/>
	</TableRow>

	<CheckBox
		android:id="@+id/checkBox_addTemplate"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:layout_marginLeft="10dp"
		android:layout_marginStart="10dp"
		android:text="@string/addTemplate"/>

</TableLayout>