<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_bank_debit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radioGroup_banks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </RadioGroup>
    
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            
            <com.chaturvedi.customviews.MyAutoCompleteTextView
                android:id="@+id/field_particulars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:singleLine="true"
                android:hint="@string/particulars"
                android:ems="10" />
            
            <Spinner
                android:id="@+id/list_creditTypes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            
            <EditText
                android:id="@+id/field_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:hint="@string/amount"
                android:ems="5" />
            
            <EditText
                android:id="@+id/field_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:singleLine="true"
                android:hint="@string/date"
                android:ems="6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >
            
            <CheckBox
                android:id="@+id/checkBox_template"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addTemplate" />
        </LinearLayout>

</LinearLayout>