<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/krishna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
	android:layout_centerHorizontal="true"
        android:text="@string/krishna" />
    
    <ScrollView
        android:id="@+id/scrollView_expTypes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/krishna"
        android:layout_above="@+id/button_add_expType" >

        <LinearLayout 
            android:id="@+id/parentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/instruction_expTypes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/instruction_expenditure_types" />
       	</LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_add_expType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/add_expType" />

</RelativeLayout>
