<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/krishna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
	android:layout_centerHorizontal="true"
        android:text="@string/krishna" />
    
    <ScrollView
		android:id="@+id/scrollView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/krishna"
		android:layout_marginBottom="75dp"
		android:layout_marginTop="30dp">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#000000" />
            
    	    <LinearLayout
				android:id="@+id/layout_title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="#FFFF4400"
				android:orientation="horizontal">
                
                <View
            	    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="#000000" />
                
                <TextView
                    android:id="@+id/titleBankName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/bankName"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp" />
                
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#000000" />
                
                <TextView
                    android:id="@+id/titleBankBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/bankBalance"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp" />
                
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="#000000" />
    	    </LinearLayout>
            
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#000000" />
            
            <LinearLayout
                android:id="@+id/parentLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

				<LinearLayout
					android:id="@+id/activeBanksLayout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"/>

				<LinearLayout
					android:id="@+id/deletedBanksLayout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"/>
                
            </LinearLayout>
    	</LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_addBank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/add_bank" />

</RelativeLayout>
